# asi-labs

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
lab_week0/: Tutorial_Python.ipynb
lab_week1/: Bayesian_Linear_Regression.ipynb
lab_week2/: Bayesian_Logistic_Regression_MCMC.ipynb
