[project]
name = "asi-labs-private"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.0.0a0",
    "ipython>=8.31.0",
    "ipywidgets>=8.1.5",
    "jax>=0.5.0",
    "matplotlib>=3.10.0",
    "numpy<2",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
